--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">CONTACT</a>
                     </li>
+<li class="nav-item">
+                    <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'pt', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</li>
                 </ul>
             </div>
         </div>
