--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function googleTranslateElementInit() {
         </div>
     </nav>
 
-    <!-- Header -->
+    <!-- Headerr -->
     <header class="masthead">
         <div class="container">
             <img class="img-fluid" src="img/profile.png" alt="">
