--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="col-lg-8 offset-lg-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form action="https://formspree.io/shertranca@mail.com" name="sentMessage" id="contactForm" novalidate>
+                    <form action="https://formspree.io/shertranca@mail.com" name="sentMessage" method="POST" id="contactForm" novalidate>
                         <div class="control-group">
                             <div class="form-group floating-label-form-group controls">
                                 <label>Name</label>
@@ -148,7 +148,7 @@
                         <br>
                         <div id="success"></div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-success btn-lg">Send</button>
+                            <input type="submit" value="Send" class="btn btn-success btn-lg">Send</button>
                         </div>
                     </form>
                 </div>
