--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <br>
                         <div id="success"></div>
                         <div class="form-group">
-                            <input type="submit" value="Send" class="btn btn-success btn-lg">Send</button>
+                            <input type="submit" value="Send" class="btn btn-success btn-lg">
                         </div>
                     </form>
                 </div>
