--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                                 <label>Email Address</label>
                                 <input name="_replyto" class="form-control" id="email" type="email" placeholder="Email Address" required data-validation-required-message="Please enter your email address.">
                                 <p class="help-block text-danger"></p>
+                                <input type="text" name="_gotcha" style="display:none" />
                             </div>
                         </div>
                         <div class="control-group">
