--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <br>
                         <div id="success"></div>
                         <div class="form-group">
-                            <input type="submit" value="Send" class="btn btn-success btn-lg">
+                            <button type="submit" class="btn btn-success btn-lg">Shoot</button>
                         </div>
                     </form>
                 </div>
