--- a/index.html
+++ b/index.html
@@ -887,6 +887,8 @@
     <script src="js/freelancer.min.js"></script>
     
     <!-- Pricing table -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
     <script src="js/index.js"></script>
 
 
